[tool.poetry]
name                       = "pythonboilerplate"
version                    = "0.1.0"
description                = "Python を開発する時用ボイラープレート"
authors                    = [
    "Naoki Aoyama"
]
license                    = "AGPL-3.0"

[tool.poetry.dependencies]
python                     = "~3.8"

[tool.poetry.dev-dependencies]
autoflake                  = "~1.4"
black                      = "~20.8b1"
flake8                     = "~3.8.4"
flake8-annotations         = "~2.5.0"
flake8-black               = "~0.2.1"
flake8-bugbear             = "~20.11.1"
flake8-builtins            = "~1.5.3"
flake8-commas              = "~2.0.0"
flake8-comprehensions      = "~3.3.0"
flake8-debugger            = "~4.0.0"
flake8-docstrings          = "~1.5.0"
flake8-fixme               = "~1.1.1"
flake8-isort               = "~4.0.0"
flake8-print               = "~4.0.0"
flake8-return              = "~1.1.2"
flake8-variables-names     = "~0.0.4"
ipykernel                  = "~5.4.3"
isort                      = "~5.7.0"
jupyter                    = "~1.0.0"
jupyter-client             = "~6.1.7"
mypy                       = "~0.800"
pip                        = "^20.0.2"
pytest                     = "~6.2.2"
pytest-cov                 = "~2.11.1"
tox                        = "~3.21.4"

[tool.black]
line-length                = 99
exclude                    = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''

[tool.coverage.run]
branch                     = true
command_line               = "-m pytest"


[tool.isort]
include_trailing_comma     = true
line_length                = 99
force_single_line          = true
force_sort_within_sections = true

[tool.pytest.ini_options]
minversion                 = "6.0"
addopts                    = [
    "-r sfp",
    "--verbose",
    "--verbose",
    "--durations=0",
    "--cov=src",
    "--cov=tests",
    "--cov-report=term",
    "--cov-report=term-missing",
    "--cov-report=term-missing",
    "--cov-report=xml"
]

[build-system]
requires                   = [
    "poetry-core>=1.0.0",
    "setuptools",
]
build-backend              = "poetry.core.masonry.api"
